[tool.poetry]
name = "mineager"
version = "0.2.0"
description = "The shard and websocket manager for the Discord bot Minecat."
authors = ["ooliver1 <oliverwilkes2006@icloud.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "mineager" },
]
repository = "https://github.com/ooliver1/mineager"

[tool.poetry.dependencies]
python = "^3.10"
websockets = "^10.3"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
